cameleon-macro/tests/wrong_access_right.stderr
error: expected NA, RO, WO, or RW
 --> $DIR/wrong_access_right.rs:8:37
  |
8 |     #[entry(len = 2, access_right = Ro)]
  |                                     ^^
